# ksysguard6

./: README.md
debian/: control
gui/SensorDisplayLib/: ProcessController.cpp
processcore/: CMakeLists.txt  extended_process_attribute.cpp  extended_process_attribute.h  extended_process_list.cpp  extended_process_list.h  process_data_provider.cpp  process_data_provider.h
processcore/plugins/network/: network.cpp  network.h
processcore/plugins/nvidia/: CMakeLists.txt  nvidia.cpp  nvidia.h
processui/: ProcessModel.cpp  ProcessModel.h  ProcessModel_p.h  ksysguardprocesslist.cpp
